Corrected alignment issues on contact.html contact form. Rule applied 'text-center'.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -321,36 +321,35 @@ footer{
 
 /* CONTACT START */
 
-.ContactTitle{
-    color: #3F826D;
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
-    margin: 0;
+.FormTopT{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 
-.ContactForm{
-    width: 100%;
-    overflow: auto;
+.FormTopT p{
+    padding-top: 1.5rem;
+    padding-bottom: 0.5rem;
 }
 
-.ContactBtnCust{
+.FormInput{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+
+}
+
+.CFBtnCust{
     background-color: #4D4847;
     border-color: #4D4847;
     color:#F4FFF8;
 }
 
-.ContactBtnCust:hover{
+
+.CFBtnCust:hover{
     background-color: #3F826D;
     border-color: #3F826D;
-    color: #FAFAFA;
+    color: #F4FFF8;
     transition: all .35s ease-in-out;
     -moz-transition: all .35s ease-in-out;
     -webkit-transition: all .35s ease-in-out;
     -o-transition: all .35s ease-in-out;
-}
-
-.EmailFTitle{
-    font-size: 20px;
-    color: #000F08;
-
 }
